# GraphBot

./: main.py  pyproject.toml
templates/: chart.html
